<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movieDetailConstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/list_back"
    tools:context=".UI.MovieDetailsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:elevation="@dimen/min_elevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></android.support.v7.widget.Toolbar>


    <ScrollView
        android:id="@+id/mainScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/list_back"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0">


        <LinearLayout
            android:id="@+id/constLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/elevation"
            android:orientation="vertical"
            android:padding="16dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/eight_dp"
                android:elevation="@dimen/elevation"
                app:cardCornerRadius="@dimen/eight_dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/poster_path"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_gravity="center"
                        android:contentDescription="image poster"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_launcher_background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/movieTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:ellipsize="end"
                        android:hint="@string/title"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/poster_path" />

                    <TextView
                        android:id="@+id/movieGenre"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="4dp"
                        android:autoSizeMaxTextSize="@dimen/eight_dp"
                        android:ellipsize="end"
                        android:hint="@string/genre"
                        android:maxLines="1"
                        android:textColor="@android:color/black"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/movieTitle" />

                    <RatingBar
                        android:id="@+id/rating"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:stepSize=".25"
                        android:theme="@style/RatingBar"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/movieGenre" />

                    <ToggleButton
                        android:id="@+id/toggleButton"
                        android:layout_width="41dp"
                        android:layout_height="38dp"
                        android:layout_marginTop="@dimen/eight_dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/fav_button"
                        android:checked="false"
                        android:text=""
                        android:textOff=""
                        android:textOn=""
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/poster_path" />

                    <TextView
                        android:id="@+id/movieReleaseDate"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:ems="10"
                        android:inputType="date"
                        app:layout_constraintStart_toEndOf="@+id/rating"
                        app:layout_constraintTop_toBottomOf="@+id/movieGenre" />
                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/eight_dp"
                android:elevation="@dimen/elevation"
                app:cardCornerRadius="@dimen/eight_dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/movieDetailsTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/eight_dp"
                        android:layout_marginTop="@dimen/eight_dp"
                        android:text="@string/movie_det_title"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/moviePlot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/eight_dp" />

                    <TextView
                        android:id="@+id/movieDirectorTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/eight_dp"
                        android:layout_marginTop="@dimen/eight_dp"
                        android:text="@string/director_title"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/movieDirector"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/eight_dp"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/movieCastTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/eight_dp"
                        android:layout_marginTop="@dimen/eight_dp"
                        android:text="@string/cast_title"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/movieCast"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/eight_dp"
                        android:textColor="@color/colorPrimaryDark" />
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/eight_dp"
                android:elevation="@dimen/elevation"
                app:cardCornerRadius="@dimen/eight_dp">

                <ToggleButton
                    android:id="@+id/similarToggle"
                    style="@android:style/Widget.Button.Toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/eight_dp"
                    android:background="@android:color/transparent"
                    android:textColor="@color/colorPrimaryDark"
                    android:textOff="@string/similar_toggle_title" />

                <include
                    android:id="@+id/similarGroup"
                    layout="@layout/similar_movies_rv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_weight="2"
                    android:visibility="gone" />
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/eight_dp"
                android:elevation="@dimen/elevation"
                app:cardCornerRadius="@dimen/eight_dp">

                <ToggleButton
                    android:id="@+id/trailerToggle"
                    style="@android:style/Widget.Button.Toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/eight_dp"
                    android:background="@android:color/transparent"
                    android:textColor="@color/colorPrimaryDark"
                    android:textOff="@string/trailers_toggle_title" />

                <include
                    android:id="@+id/trailerGroup"
                    layout="@layout/trailer_rv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_weight="2"
                    android:visibility="visible" />
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/eight_dp"
                android:elevation="@dimen/elevation"
                app:cardCornerRadius="@dimen/eight_dp">

                <ToggleButton
                    android:id="@+id/reviewToggle"
                    style="@android:style/Widget.Button.Toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/eight_dp"
                    android:background="@android:color/transparent"
                    android:textColor="@color/colorPrimaryDark"
                    android:textOff="@string/reviewLabelExist" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_movieReviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/reviews_rv_margin"
                    android:visibility="gone">

                </android.support.v7.widget.RecyclerView>

                <TextView
                    android:id="@+id/reviewText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/eight_dp"
                    android:text="@string/no_reviews"
                    android:textColor="@color/colorPrimaryDark"
                    android:visibility="gone" />

            </android.support.v7.widget.CardView>

            <View
                android:id="@+id/fakeView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fake_views_height" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>